--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "autoprefixer": "^10.4.20",
+    "leaflet": "^1.9.4",
     "postcss-cli": "^11.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "5.0.0-rc.2",
     "react-scripts": "5.0.1",
     "tailwindcss": "^4.0.6",
     "typescript": "^4.9.5",
@@ -47,14 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
-    "@typescript-eslint/eslint-plugin": "^8.24.0",
-    "@typescript-eslint/parser": "^8.24.0",
-    "eslint": "^9.20.1",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "globals": "^15.15.0",
-    "typescript-eslint": "^8.24.0"
+    "@types/leaflet": "^1.9.16",
+    "globals": "^15.15.0"
   }
 }
